@@ -39,6 +39,7 @@ Version 2.2.0
    - Feature: Catch some additional signals and give an error message
    - Bugfix: Changed 0 to NULL to get rid of compiler warning
    - Updated intltool (to version 0.34.1) and gettext (to version 0.14.4) files
+   - Feature: Applet can now be put into system tray (option "--systemtray")
  * Roland Stigge
    - Added reference to info pages in man page (Debian bug #335193)
 
